# picobundler

./: .gitmodules  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: FUNDING.yml
.github/workflows/: validate.yml
cli/: Cargo.toml  build.rs
cli/src/: args.rs  main.rs
cli/src/cli/: cmd.rs  error.rs  mod.rs  progress.rs  trace.rs
cmake/: CMakeLists.txt  entry.cpp
cmake/zig/: README.md  zig-toolchain.cmake
examples/example-clap/: Cargo.toml
examples/example-clap/src/: lib.rs
